--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "telebot": "^1.4.1",
     "tsyringe": "^4.0.1",
     "viber-bot": "^1.0.16",
-    "winston": "^2.4.2"
+    "winston": "^2.4.2",
+    "tracer": "^1.1.2",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/async": "^3.0.0",
@@ -68,6 +70,7 @@
     "supertest": "^4.0.2",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
-    "typescript": "^3.5.2"
+    "typescript": "^3.5.2",
+    "@types/jsonwebtoken": "^8.3.4"
   }
 }
