--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "watch-test": "npm run test -- --watchAll",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
-    "restart": "tsc && pm2 restart kyiv-bot && pm2 restart odesa-bot"
+    "restart": "tsc && pm2 restart kyiv-bot && pm2 restart odesa-bot",
+    "add:admin": "node dist/services/create.password.command.js"
   },
   "dependencies": {
     "@types/telebot": "^1.2.2",
@@ -38,7 +39,9 @@
     "viber-bot": "^1.0.16",
     "winston": "^2.4.2",
     "tracer": "^1.1.2",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "prompt": "^1.0.0",
+    "generate-password": "^1.4.2"
   },
   "devDependencies": {
     "@types/async": "^3.0.0",
